🤝 Connected scraper script to classifier

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ ML-Emote-Classifier/scraped-emotes.json
 ML-Emote-Classifier/geckodriver.log
 ML-Emote-Classifier/geckodriver.exe
 ML-Emote-Classifier/geckodriver.txt
+ML-Emote-Classifier/__pycache__
