--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 afinn==0.1
-pandas==1.4.2
+beautifulsoup4==4.11.1
+pandas==1.4.3
 pandas_stubs==1.2.0.58
+selenium==4.3.0
+statsmodels==0.13.2
 streamlit==1.9.2
